--- a/lib/chrono_web/templates/page/page.html.eex
+++ b/lib/chrono_web/templates/page/page.html.eex
@@ -4,7 +4,7 @@
 <% else %>
 <section id="<%= @page.title |> String.replace(" ", "")%>" class="padding-top-bottom bg-shop">
 <% end %>
-<div class="container">
+<div class="container-fluid">
   <%= render "content.html", page: @page, conn: @conn %>
 </div>
 </section>
