--- a/lib/chrono_web/templates/page/register_interest.html.eex
+++ b/lib/chrono_web/templates/page/register_interest.html.eex
@@ -1,5 +1,5 @@
 <section id="contact" class="bg-clouds padding-top-bottom">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row header">
         <div class="col-md-12">
           <h2>Learn more</h2>
