--- a/lib/chrono_web/templates/page/video.html.eex
+++ b/lib/chrono_web/templates/page/video.html.eex
@@ -1,7 +1,7 @@
 
 <section id="<%= @page.title |> String.replace(" ", "")%>" class="padding-top-bottom white-text">
   <div class="dark-overlay"></div>
-  <div class="container">
+  <div class="container-fluid">
     <%= render "content.html", page: @page, conn: @conn %>
   </div>
 </section>
