--- a/lib/chrono_web/templates/watch/watch.html.eex
+++ b/lib/chrono_web/templates/watch/watch.html.eex
@@ -1,9 +1,73 @@
-<div class="col-md-<%= (12/@watches_per_row) |>trunc  %>">
-  <div class="product bg-shop">
-    <a href="single.html" class="mask"><img class="img-responsive zoom-img" src="https:<%= elem(@watch,0).background_img %>" alt="" /></a>
-    <div class="product-bottom"> 
-      <h3><%= elem(@watch,0).title %></h3>
-      <%= raw(elem(@watch,0).html) %>
-    </div> 
-  </div>   
+<div class="container product-container">
+
+  <div class="product bg-clouds">
+    <div class="row header">
+      <div class="col-12 text-left">
+        <h3><%= @watch.title %></h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 text-left">
+        <%= raw(@watch.html) %>
+      </div>
+    </div>
+    <div class="row product-row">
+      <div class="col-md-6">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="product-img d-block w-100" src="https:<%= @watch.background_img %>" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-img d-block w-100" src="https:<%= @watch.background_img %>" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-img d-block w-100" src="https:<%= @watch.background_img %>" alt="Third slide">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 text-left product-table bg-dark white-text">
+        <div class="container-fluid">
+          <div class="row header">
+            <div class="col-12 text-left">
+              <h4>Details</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 font-weight-bold">Brand</div>
+            <div class="col-6">JimBob</div>
+          </div>
+          <div class="row">
+            <div class="col-6 font-weight-bold">Model</div>
+            <div class="col-6">24hour</div>
+          </div>
+          <div class="row">
+            <div class="col-6 font-weight-bold">Movement</div>
+            <div class="col-6">Automatic</div>
+          </div>
+          <div class="row">
+            <div class="col-6 font-weight-bold">Case Material</div>
+            <div class="col-6">Steel</div>
+          </div>
+          <div class="row">
+            <div class="col-6 font-weight-bold">Bracelet Material</div>
+            <div class="col-6">Steel</div>
+          </div>
+          <div class="row">
+            <div class="col-6 ">Year</div>
+            <div class="col-6">1973</div>
+          </div>
+        </div>
+      </div>
+
+    <div class="row">
+      <div class="col-12 text-left">
+        <h4>Description</h4>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
+
+  </div>
 </div>
