--- a/lib/chrono_web/templates/watch/watches.html.eex
+++ b/lib/chrono_web/templates/watch/watches.html.eex
@@ -1,4 +1,4 @@
-<div id="wrap" class="container">
+<div id="wrap" class="container bg-shop product-container">
   <div class="row-header">
     <h1>The Watches</h1>
     <p>blah blah</p>
@@ -9,7 +9,7 @@
     <%= if rem(elem(watch,1),@watches_per_row) == 0 && elem(watch,1) > 0 do %>
         <div class="w-100"></div>
     <% end %>
-      <%= render "watch.html", watch: watch, conn: @conn, watches_per_row: @watches_per_row  %>
+      <%= render "watch_summary.html", watch: elem(watch,0), conn: @conn, watches_per_row: @watches_per_row %>
   <% end %>
   </div>
 
