added link to watches page

--- a/assets/css/style-yellow.css
+++ b/assets/css/style-yellow.css
@@ -732,7 +732,7 @@ form p {
   padding: 0 35px;
   margin: 0 10px 15px 0;
   color: #202020;
-  background: #bdc3c7;
+  background:  #7F8C8D;
   -webkit-font-smoothing: subpixel-antialiased;
   -webkit-transition: none;
   -moz-transition: none;
