--- a/lib/chrono_web/templates/page/hero.html.eex
+++ b/lib/chrono_web/templates/page/hero.html.eex
@@ -2,14 +2,10 @@
   <div class="center-box">
     <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-10 col-xs-offset-1 img-hero">
-          </div>
+          <div class="col-10 offset-1 img-hero"></div>
         </div>
-        <!--div class="row">
-          <h1 class="hero-title"><b><%= @page.title %></b></h1>
-        </div-->
         <div class="row">
-          <div class="col-md-8 col-md-offset-2 text-center">
+          <div class="col-8 offset-2 text-center">
             <%= raw(@page.html) %>
           </div>
         </div>
