--- a/lib/chrono_web/templates/page/showcase.html.eex
+++ b/lib/chrono_web/templates/page/showcase.html.eex
@@ -22,7 +22,7 @@
                             <%= render "content.html", page: @page, conn: @conn %>
                             <div class ="row">
                                 <div class="col-8 offset-2 text-centered">
-                                    <a id="theWatches" class="btn btn-block" data-remote="/watches" data-toggle="modal" data-target="#theModal">See our collection</a>
+                                    <a id="theWatches" class="btn btn-block" href="/watches">See our collection</a>
                                 </div>
                             </div>
                         </div>                        
@@ -32,22 +32,3 @@
         </div>
     </div>
 </section> 
-<!-- end vertical center / slider -->
-
-<div class="modal fade" id="theModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                ... remote content from "data-remote" loads here ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
