--- a/lib/chrono_web/templates/watch/watches.html.eex
+++ b/lib/chrono_web/templates/watch/watches.html.eex
@@ -1,4 +1,13 @@
-<div id="wrap" class="container bg-shop product-container">
+<div class="overlay" id="overlay">
+    <nav class="overlay-menu">
+    <ul>
+        <li><a href="/" class="smooth-scroll">Chrono6538</a></li>
+    </ul>
+    </nav>
+</div>
+
+
+<div id="wrap" class="container bg-shop">
   <div class="row-header">
     <h1>The Watches</h1>
     <p>blah blah</p>
