--- a/lib/chrono_web/templates/watch/watch.html.eex
+++ b/lib/chrono_web/templates/watch/watch.html.eex
@@ -80,7 +80,7 @@
     </div>
   </div>
       <div class="row">
-      <div class="col-4 offset-4 text-center">
+      <div class="col-12 text-center">
          <a href="/watches" id="theWatches" class="btn btn-block" >Back to the collection</a>
       </div>
     </div>
