--- a/assets/css/style-yellow.css
+++ b/assets/css/style-yellow.css
@@ -289,7 +289,7 @@ section {
   line-height: 32px;
   border: none;
   color: #202020;
-  border-radius: 4px;
+  border-radius: 21px;
   outline: none;
   /*height: 50px;*/
   font-size: 16px;
@@ -527,7 +527,7 @@ form p {
   height: 50px;
   width: 50px;
   z-index: 200;
-  border-radius: 50%;
+  border-radius: 21px;
   right: 5%;
   background-color: #202020;
 }
@@ -728,10 +728,10 @@ form p {
   font-weight: 600;
   line-height: 46px;
   letter-spacing: 1px;
-  border-radius: 4px;
+  border-radius: 21px;
   padding: 0 35px;
   margin: 0 10px 15px 0;
-  color: #202020;
+  color: #ecf0f1;
   background:  #7F8C8D;
   -webkit-font-smoothing: subpixel-antialiased;
   -webkit-transition: none;
@@ -749,6 +749,7 @@ form p {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+  color: #202020;
 }
 .btn:active,
 .btn.active {
@@ -837,7 +838,7 @@ form p {
   height: 40px;
   line-height: 40px;
   text-align: center;
-  border-radius: 50%;
+  border-radius: 21px;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
@@ -874,7 +875,7 @@ form p {
   width: 40px;
   height: 40px;
   border: 2px solid #202020;
-  border-radius: 50%;
+  border-radius: 21px;
   line-height: 36px;
   text-align: center;
   font-size: 28px;
@@ -980,7 +981,7 @@ blockquote,
   color: #b6b6b6;
 }
 .features-1 article .zoom-img {
-  border-radius: 50%;
+  border-radius: 21px;
   width: 180px;
   z-index: 1;
   margin-bottom: 25px;
@@ -1033,7 +1034,7 @@ blockquote,
   text-align: center;
   background: #bdc3c7;
   color: #fff;
-  border-radius: 26px;
+  border-radius: 21px;
   position: relative;
   top: -30px;
 }
@@ -1090,7 +1091,7 @@ blockquote,
   height: 50px;
   width: 50px;
   z-index: 200;
-  border-radius: 50%;
+  border-radius: 21px;
   right: 15px;
   background-color: #202020;
   -webkit-transition: all 0.2s ease-in-out;
@@ -1215,97 +1216,7 @@ blockquote,
   background-size: cover;
   background-repeat: no-repeat;
 }
-.owl-item {
-  overflow: hidden;
-}
-.owl-carousel,
-.owl-stage-outer,
-.owl-stage,
-.owl-item {
-  height: inherit;
-}
-.owl-theme .owl-controls {
-  text-align: center;
-  -webkit-tap-highlight-color: transparent;
-}
-.owl-theme .owl-controls .owl-nav [class*='owl-'] {
-  background: transparent;
-  display: inline-block;
-  color: #FFF;
-  font-size: 25px;
-  width: 48px;
-  height: 48px;
-  line-height: 48px;
-  text-align: center;
-  border-radius: 50%;
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  position: absolute;
-}
-.owl-theme .owl-controls .owl-nav [class*='owl-']:hover {
-  background: rgba(255, 255, 255, 0.5);
-  /*border: 2px solid #fff;*/
-  /*color: white;*/
-  text-decoration: none;
-}
-.owl-nav .fa {
-  font-size: 33px;
-  line-height: 48px;
-  /* position: absolute; */
-  /* width: 100%; */
-  /* top: 10%; */
-}
-.owl-theme .owl-controls .owl-nav .owl-next {
-  top: 45%;
-  right: 20px;
-}
-.owl-theme .owl-controls .owl-nav .owl-prev {
-  top: 45%;
-  left: 20px;
-}
-/* owl-theme .owl-dots {
-  margin-top: 55px;
-}*/
-.owl-theme .owl-controls .owl-nav .disabled {
-  opacity: 0.5;
-  cursor: default;
-}
-.owl-theme .owl-dots {
-  position: absolute;
-  bottom: 0px;
-  margin: 0 auto;
-  width: 100%;
-}
-.owl-theme .owl-dots .owl-dot {
-  display: inline-block;
-  zoom: 1;
-  *display: inline;
-}
-.owl-theme .owl-dots .owl-dot span {
-  width: 12px;
-  height: 12px;
-  margin: 5px 7px;
-  background: #FFF;
-  display: block;
-  backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  -webkit-transition: opacity 200ms ease;
-  -moz-transition: opacity 200ms ease;
-  -ms-transition: opacity 200ms ease;
-  -o-transition: opacity 200ms ease;
-  transition: opacity 200ms ease;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-}
-.owl-theme .owl-dots .owl-dot.active span,
-.owl-theme .owl-dots .owl-dot:hover span {
-  background: #FFF;
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
+
 /*-----  End of Slider  ------*/
 .parallax-container {
   position: relative;
