--- a/lib/chrono_web/templates/watch/watch.html.eex
+++ b/lib/chrono_web/templates/watch/watch.html.eex
@@ -7,33 +7,32 @@
     </nav>
 </div>
 
-
+<%= with watch <- @watch |> parse_watch  do %>
 <div class="container product-container">
 
-  <div class="product bg-clouds">
+  <div class="product no_rounding bg-clouds">
     <div class="row header">
       <div class="col-12 text-left">
-        <h3><%= @watch.title %></h3>
+        <h3><%= watch.title %></h3>
       </div>
     </div>
     <div class="row">
       <div class="col-12 text-left">
-        <%= raw(@watch.html) %>
+        <%= raw(watch.html) %>
       </div>
     </div>
     <div class="row product-row">
       <div class="col-md-6">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="4181">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="product-img d-block w-100" src="https:<%= @watch.background_img %>" alt="First slide">
+              <img class="product-img d-block w-100" src="https:<%= watch.main_img %>" alt="<%= watch.title %>">
             </div>
+            <%= for photo <- watch.supporting_photos do %>
             <div class="carousel-item">
-              <img class="product-img d-block w-100" src="https:<%= @watch.background_img %>" alt="Second slide">
+              <img class="product-img d-block w-100" src="https:<%= photo.photo %>" alt="<%= photo.title %>">
             </div>
-            <div class="carousel-item">
-              <img class="product-img d-block w-100" src="https:<%= @watch.background_img %>" alt="Third slide">
-            </div>
+            <% end %>
           </div>
         </div>
       </div>
@@ -45,43 +44,27 @@
               <h4>Details</h4>
             </div>
           </div>
+          <%= for detail <- watch.details do %>
           <div class="row">
-            <div class="col-6 font-weight-bold">Brand</div>
-            <div class="col-6">JimBob</div>
+            <div class="col-6 font-weight-bold"><%= detail.label %></div>
+            <div class="col-6"><%= detail.value %></div>
           </div>
-          <div class="row">
-            <div class="col-6 font-weight-bold">Model</div>
-            <div class="col-6">24hour</div>
-          </div>
-          <div class="row">
-            <div class="col-6 font-weight-bold">Movement</div>
-            <div class="col-6">Automatic</div>
-          </div>
-          <div class="row">
-            <div class="col-6 font-weight-bold">Case Material</div>
-            <div class="col-6">Steel</div>
-          </div>
-          <div class="row">
-            <div class="col-6 font-weight-bold">Bracelet Material</div>
-            <div class="col-6">Steel</div>
-          </div>
-          <div class="row">
-            <div class="col-6 ">Year</div>
-            <div class="col-6">1973</div>
-          </div>
+          <% end %>          
         </div>
       </div>
 
     <div class="row">
       <div class="col-12 text-left">
         <h4>Description</h4>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        <%= raw(watch.full_description) %>
       </div>
     </div>
   </div>
-      <div class="row">
+  <div class="row">
       <div class="col-12 text-center">
          <a href="/watches" id="theWatches" class="btn btn-block" >Back to the collection</a>
       </div>
-    </div>
+  </div>
+<% end %>
+
 </div>
