--- a/lib/chrono_web/templates/watch/watches.html.eex
+++ b/lib/chrono_web/templates/watch/watches.html.eex
@@ -6,11 +6,9 @@
     </nav>
 </div>
 
-
 <div id="wrap" class="container bg-shop">
   <div class="row-header">
-    <h1>The Watches</h1>
-    <p>blah blah</p>
+    <%= render ChronoWeb.PageView, "content.html", conn: @conn, page: ChronoWeb.WatchView.the_watches %>
   </div>
 
   <div class="row product-row">
@@ -21,5 +19,4 @@
       <%= render "watch_summary.html", watch: elem(watch,0), conn: @conn, watches_per_row: @watches_per_row %>
   <% end %>
   </div>
-
 </div>
