--- a/lib/chrono_web/templates/watch/watch.html.eex
+++ b/lib/chrono_web/templates/watch/watch.html.eex
@@ -26,7 +26,7 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="4181">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="product-img d-block w-100" src="https:<%= watch.main_img %>" alt="<%= watch.title %>">
+              <img class="product-img d-block w-100" src="https:<%= watch.main_img.photo %>" alt="<%= watch.main_img.title %>">
             </div>
             <%= for photo <- watch.supporting_photos do %>
             <div class="carousel-item">
