--- a/lib/chrono_web/templates/page/container.html.eex
+++ b/lib/chrono_web/templates/page/container.html.eex
@@ -11,7 +11,9 @@
      <%= @style %>">
   <% end %>
   <div class="container-fluid">
-    <%= render "content.html", page: @page, conn: @conn %>
+    <%= render "content.html", page: @page, conn: @conn, blog: assigns[:blog], blog_posts: @blog_posts %>
   </div>
+
+ 
 </section>
 
