--- a/assets/css/watches.css
+++ b/assets/css/watches.css
@@ -47,7 +47,7 @@
 .product-img.d-block  {
     height: auto;
     max-height: 21em;
-    object-fit: contain;
+    object-fit: cover;
   }
 
 .product-table {
